--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <div class="event-grid">
                 <a href="#" class="upcoming-event-card">
-                    <img src="assets/IMG_6386.png" alt="DBA 4" class="upcoming-poster">
+                    <img src="assets/Nama Proyek 63.png" alt="DBA 4" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA 3: Indonesia vs Malaysia 2</h4>
                         <span class="upcoming-date">Coming Soon</span>
