--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/IMG_6399.png" alt="DBA Special Match" class="event-poster">
+                    <img src="assets/quality_restoration_20250819223621254.png" alt="DBA Special Match: Yulz vs Kazz" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
@@ -133,7 +133,7 @@
             </div>
             <div class="event-grid">
                 <a href="#" class="upcoming-event-card">
-                    <img src="assets/Nama Proyek 63.png" alt="DBA 4" class="upcoming-poster">
+                    <img src="assets/IMG_6386.png" alt="DBA 4" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA 3: Indonesia vs Malaysia 2</h4>
                         <span class="upcoming-date">Coming Soon</span>
