--- a/index.html
+++ b/index.html
@@ -72,15 +72,18 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/quality_restoration_20250819223621254.png" alt="DBA Special Match: Yulz vs Kazz" class="event-poster">
+                    <img src="assets/IMG_6399.png" alt="DBA Special Match" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
                     <ul class="match-list">
                         <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">YULZ CLOVER vs KAZZ</span>
-                                <span class="match-result win">WIN YULZ</span>
+                            <div class="match-content">
+                                <img src="assets/quality_restoration_20250819223621254.png" alt="Yulz vs Kazz" class="match-poster-small">
+                                <div class="match-details">
+                                    <span class="match-pair">YULZ CLOVER vs KAZZ</span>
+                                    <span class="match-result win">WIN YULZ</span>
+                                </div>
                             </div>
                             <div class="match-extra-info">
                                 <span class="match-tier">Mid Tier Battle</span>
