--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/DBA SPECIAL MATCH Copy.png" alt="DBA Special Match" class="event-poster">
+                    <img src="assets/assets/DBA SPECIAL MATCH Copy.png" alt="DBA Special Match" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
@@ -135,7 +135,7 @@
             </div>
             <div class="event-grid">
                 <a href="#" class="upcoming-event-card">
-                    <img src="assets/assets/Nama Proyek 63.png" alt="DBA 4" class="upcoming-poster">
+                    <img src="assets/assets/Nama Proyek 63.png" alt="DBA 3" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA 3: Indonesia vs Malaysia 2</h4>
                         <span class="upcoming-date">Coming Soon</span>
