--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/DBA SPECIAL MATCH Copy.png" alt="DBA Special Match" class="event-poster">
+                    <img src="assets/quality_restoration_20250824134017143.png" alt="DBA Special Match" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
