--- a/index.html
+++ b/index.html
@@ -70,61 +70,40 @@
     <main class="main-content">
         <section class="on-going-event">
             <div class="section-header">
-                <h2 class="section-title">ONGOING EVENT</h2>
+                <h2 class="section-title">FIGHT CARD</h2>
+                <p class="subtitle">MORE FIGHTS TO BE ANNOUNCED</p>
             </div>
-            <div class="event-card-large">
-                <div class="card-image-wrapper">
-                    <img src="assets/quality_restoration_20250824134017143.png" alt="DBA Special Match" class="event-poster">
+            <div class="main-fight-card">
+                <div class="fight-title">DBA SPECIAL MATCH</div>
+                <div class="fighters-container">
+                    <div class="fighter-card">
+                        <img src="assets/Gambar.jpeg" alt="YULZ CLOVER" class="fighter-photo">
+                        <h3 class="fighter-name">YULZ CLOVER</h3>
+                        <p class="fighter-country">Debater</p>
+                    </div>
+                    <div class="vs-text">vs</div>
+                    <div class="fighter-card">
+                        <img src="assets/Gambar.jpeg" alt="KAZZ" class="fighter-photo">
+                        <h3 class="fighter-name">KAZZ</h3>
+                        <p class="fighter-country">Debater</p>
+                    </div>
                 </div>
-                <div class="card-content-wrapper">
-                    <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
-                    <ul class="match-list">
-                        <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">YULZ CLOVER vs KAZZ</span>
-                                <span class="match-result win">WIN YULZ</span>
-                            </div>
-                            <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Battle</span>
-                            </div>
-                        </li>
-                        <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">IULIAN vs KARIZ</span>
-                                <span class="match-result pending">??</span>
-                            </div>
-                            <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
-                            </div>
-                        </li>
-                        <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">RANZT vs HIROO</span>
-                                <span class="match-result pending">??</span>
-                            </div>
-                            <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
-                            </div>
-                        </li>
-                        <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">ADYY vs AHENG</span>
-                                <span class="match-result pending">??</span>
-                            </div>
-                            <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
-                            </div>
-                        </li>
-                        <li class="match-item">
-                            <div class="match-details">
-                                <span class="match-pair">AARON vs HYRUKI/DEATH END</span>
-                                <span class="match-result pending">??</span>
-                            </div>
-                            <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
-                            </div>
-                        </li>
-                    </ul>
+            </div>
+
+            <div class="main-fight-card">
+                <div class="fight-title">High Tier Battle</div>
+                <div class="fighters-container">
+                    <div class="fighter-card">
+                        <img src="assets/Gambar.jpeg" alt="IULIAN" class="fighter-photo">
+                        <h3 class="fighter-name">IULIAN</h3>
+                        <p class="fighter-country">Debater</p>
+                    </div>
+                    <div class="vs-text">vs</div>
+                    <div class="fighter-card">
+                        <img src="assets/Gambar.jpeg" alt="KARIZ" class="fighter-photo">
+                        <h3 class="fighter-name">KARIZ</h3>
+                        <p class="fighter-country">Debater</p>
+                    </div>
                 </div>
             </div>
         </section>
