--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <span class="match-result win">WIN YULZ</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Battle</span>
+                                <span class="match-tier">Mid Tier Debate</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -94,7 +94,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">High Tier Debate</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -103,7 +103,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">Mid Tier Debate</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -112,7 +112,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">High Tier Debate</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -121,7 +121,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">High Tier Debate</span>
                             </div>
                         </li>
                     </ul>
