--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </li>
                         <li class="match-item">
                             <div class="match-details">
-                                <span class="match-pair">AARON vs HYRUKI/DEATH END</span>
+                                <span class="match-pair">AARON vs HYRUKI</span>
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
