--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/quality_restoration_20250824134017143.png" alt="DBA Special Match" class="event-poster">
+                    <img src="assets/IMG_6399.png" alt="DBA Special Match" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
@@ -85,7 +85,7 @@
                                 <span class="match-result win">WIN YULZ</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Debate</span>
+                                <span class="match-tier">Mid Tier Battle</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -94,7 +94,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -103,7 +103,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -112,16 +112,16 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                         </li>
                         <li class="match-item">
                             <div class="match-details">
-                                <span class="match-pair">AARON vs HYRUKI</span>
+                                <span class="match-pair">AARON vs HYRUKI/DEATH END</span>
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                         </li>
                     </ul>
@@ -135,10 +135,18 @@
             </div>
             <div class="event-grid">
                 <a href="#" class="upcoming-event-card">
-                    <img src="assets/Nama Proyek 63.png" alt="DBA 3" class="upcoming-poster">
+                    <img src="assets/IMG_6386.png" alt="DBA 4" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA 3: Indonesia vs Malaysia 2</h4>
                         <span class="upcoming-date">Coming Soon</span>
+                    </div>
+                    <div class="voting-section">
+                        <h5 class="voting-title">Siapa yang akan menang?</h5>
+                        <div class="voting-options">
+                            <label><input type="radio" name="vote-match-1" value="indonesia"> Indonesia</label>
+                            <label><input type="radio" name="vote-match-1" value="malaysia"> Malaysia</label>
+                        </div>
+                        <button class="vote-button">Vote</button>
                     </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
@@ -147,12 +155,28 @@
                         <h4 class="upcoming-title">DBA Ragnarok</h4>
                         <span class="upcoming-date">TBA</span>
                     </div>
+                    <div class="voting-section">
+                        <h5 class="voting-title">Siapa yang akan menang?</h5>
+                        <div class="voting-options">
+                            <label><input type="radio" name="vote-match-2" value="thor"> Thor</label>
+                            <label><input type="radio" name="vote-match-2" value="loki"> Loki</label>
+                        </div>
+                        <button class="vote-button">Vote</button>
+                    </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
                     <img src="assets/IMG_6384.png" alt="DBA Battle Memes" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA Battle Memes</h4>
                         <span class="upcoming-date">TBA</span>
+                    </div>
+                    <div class="voting-section">
+                        <h5 class="voting-title">Siapa yang akan menang?</h5>
+                        <div class="voting-options">
+                            <label><input type="radio" name="vote-match-3" value="meme-a"> Meme A</label>
+                            <label><input type="radio" name="vote-match-3" value="meme-b"> Meme B</label>
+                        </div>
+                        <button class="vote-button">Vote</button>
                     </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
@@ -161,7 +185,35 @@
                         <h4 class="upcoming-title">DBA 4</h4>
                         <span class="upcoming-date">TBA</span>
                     </div>
+                    <div class="voting-section">
+                        <h5 class="voting-title">Siapa yang akan menang?</h5>
+                        <div class="voting-options">
+                            <label><input type="radio" name="vote-match-4" value="debater-a"> Debater A</label>
+                            <label><input type="radio" name="vote-match-4" value="debater-b"> Debater B</label>
+                        </div>
+                        <button class="vote-button">Vote</button>
+                    </div>
                 </a>
+            </div>
+        </section>
+
+        <section class="comments-section">
+            <div class="section-header">
+                <h2 class="section-title">KOMENTAR</h2>
+            </div>
+            <div class="comment-form">
+                <textarea placeholder="Tulis komentar Anda di sini..." class="comment-input"></textarea>
+                <button class="comment-submit">Kirim Komentar</button>
+            </div>
+            <div class="comment-list">
+                <div class="comment-item">
+                    <div class="comment-author">Penggemar_DBA</div>
+                    <div class="comment-text">Pertandingan yang sangat seru! Tidak sabar menunggu yang berikutnya.</div>
+                </div>
+                <div class="comment-item">
+                    <div class="comment-author">Analisis_Debat</div>
+                    <div class="comment-text">Gaya debat Yulz sangat kuat di babak 3. Dia layak menang.</div>
+                </div>
             </div>
         </section>
     </main>
