--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                             <div class="match-extra-info">
                                 <span class="match-tier">High Tier Battle</span>
                             </div>
+                            <div class="voting-section-small">
+                                <div class="voting-options-small">
+                                    <label><input type="radio" name="vote-iulian-kariz" value="iulian"> Iulian</label>
+                                    <label><input type="radio" name="vote-iulian-kariz" value="kariz"> Kariz</label>
+                                </div>
+                                <button class="vote-button-small">Vote</button>
+                            </div>
                         </li>
                         <li class="match-item">
                             <div class="match-details">
@@ -104,6 +111,13 @@
                             </div>
                             <div class="match-extra-info">
                                 <span class="match-tier">High Tier Battle</span>
+                            </div>
+                            <div class="voting-section-small">
+                                <div class="voting-options-small">
+                                    <label><input type="radio" name="vote-ranzt-hiroo" value="ranzt"> Ranzt</label>
+                                    <label><input type="radio" name="vote-ranzt-hiroo" value="hiroo"> Hiroo</label>
+                                </div>
+                                <button class="vote-button-small">Vote</button>
                             </div>
                         </li>
                         <li class="match-item">
@@ -114,6 +128,13 @@
                             <div class="match-extra-info">
                                 <span class="match-tier">High Tier Battle</span>
                             </div>
+                            <div class="voting-section-small">
+                                <div class="voting-options-small">
+                                    <label><input type="radio" name="vote-adyy-aheng" value="adyy"> Adyy</label>
+                                    <label><input type="radio" name="vote-adyy-aheng" value="aheng"> Aheng</label>
+                                </div>
+                                <button class="vote-button-small">Vote</button>
+                            </div>
                         </li>
                         <li class="match-item">
                             <div class="match-details">
@@ -122,6 +143,13 @@
                             </div>
                             <div class="match-extra-info">
                                 <span class="match-tier">High Tier Battle</span>
+                            </div>
+                            <div class="voting-section-small">
+                                <div class="voting-options-small">
+                                    <label><input type="radio" name="vote-aaron-hyruki" value="aaron"> Aaron</label>
+                                    <label><input type="radio" name="vote-aaron-hyruki" value="hyruki"> Hyruki/Death End</label>
+                                </div>
+                                <button class="vote-button-small">Vote</button>
                             </div>
                         </li>
                     </ul>
@@ -140,28 +168,12 @@
                         <h4 class="upcoming-title">DBA 3: Indonesia vs Malaysia 2</h4>
                         <span class="upcoming-date">Coming Soon</span>
                     </div>
-                    <div class="voting-section">
-                        <h5 class="voting-title">Siapa yang akan menang?</h5>
-                        <div class="voting-options">
-                            <label><input type="radio" name="vote-match-1" value="indonesia"> Indonesia</label>
-                            <label><input type="radio" name="vote-match-1" value="malaysia"> Malaysia</label>
-                        </div>
-                        <button class="vote-button">Vote</button>
-                    </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
                     <img src="assets/IMG_6390.png" alt="DBA Ragnarok" class="upcoming-poster">
                     <div class="upcoming-details">
                         <h4 class="upcoming-title">DBA Ragnarok</h4>
                         <span class="upcoming-date">TBA</span>
-                    </div>
-                    <div class="voting-section">
-                        <h5 class="voting-title">Siapa yang akan menang?</h5>
-                        <div class="voting-options">
-                            <label><input type="radio" name="vote-match-2" value="thor"> Thor</label>
-                            <label><input type="radio" name="vote-match-2" value="loki"> Loki</label>
-                        </div>
-                        <button class="vote-button">Vote</button>
                     </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
@@ -170,14 +182,6 @@
                         <h4 class="upcoming-title">DBA Battle Memes</h4>
                         <span class="upcoming-date">TBA</span>
                     </div>
-                    <div class="voting-section">
-                        <h5 class="voting-title">Siapa yang akan menang?</h5>
-                        <div class="voting-options">
-                            <label><input type="radio" name="vote-match-3" value="meme-a"> Meme A</label>
-                            <label><input type="radio" name="vote-match-3" value="meme-b"> Meme B</label>
-                        </div>
-                        <button class="vote-button">Vote</button>
-                    </div>
                 </a>
                 <a href="#" class="upcoming-event-card">
                     <img src="assets/IMG_6386.png" alt="DBA 4" class="upcoming-poster">
@@ -185,18 +189,10 @@
                         <h4 class="upcoming-title">DBA 4</h4>
                         <span class="upcoming-date">TBA</span>
                     </div>
-                    <div class="voting-section">
-                        <h5 class="voting-title">Siapa yang akan menang?</h5>
-                        <div class="voting-options">
-                            <label><input type="radio" name="vote-match-4" value="debater-a"> Debater A</label>
-                            <label><input type="radio" name="vote-match-4" value="debater-b"> Debater B</label>
-                        </div>
-                        <button class="vote-button">Vote</button>
-                    </div>
                 </a>
             </div>
         </section>
-
+        
         <section class="comments-section">
             <div class="section-header">
                 <h2 class="section-title">KOMENTAR</h2>
