--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                             </div>
                             <div class="voting-section-small">
                                 <div class="voting-options-small">
-                                    <label><input type="radio" name="vote-iulian-kariz" value="iulian"> Iulian</label>
-                                    <label><input type="radio" name="vote-iulian-kariz" value="kariz"> Kariz</label>
+                                    <label><input type="radio" name="vote-iulian-kariz" value="iulian"> <span></span> Iulian</label>
+                                    <label><input type="radio" name="vote-iulian-kariz" value="kariz"> <span></span> Kariz</label>
                                 </div>
-                                <button class="vote-button-small">Vote</button>
+                                <a href="vote-sent.html" class="vote-button-small">Vote</a>
                             </div>
                         </li>
                         <li class="match-item">
@@ -114,10 +114,10 @@
                             </div>
                             <div class="voting-section-small">
                                 <div class="voting-options-small">
-                                    <label><input type="radio" name="vote-ranzt-hiroo" value="ranzt"> Ranzt</label>
-                                    <label><input type="radio" name="vote-ranzt-hiroo" value="hiroo"> Hiroo</label>
+                                    <label><input type="radio" name="vote-ranzt-hiroo" value="ranzt"> <span></span> Ranzt</label>
+                                    <label><input type="radio" name="vote-ranzt-hiroo" value="hiroo"> <span></span> Hiroo</label>
                                 </div>
-                                <button class="vote-button-small">Vote</button>
+                                <a href="vote-sent.html" class="vote-button-small">Vote</a>
                             </div>
                         </li>
                         <li class="match-item">
@@ -130,10 +130,10 @@
                             </div>
                             <div class="voting-section-small">
                                 <div class="voting-options-small">
-                                    <label><input type="radio" name="vote-adyy-aheng" value="adyy"> Adyy</label>
-                                    <label><input type="radio" name="vote-adyy-aheng" value="aheng"> Aheng</label>
+                                    <label><input type="radio" name="vote-adyy-aheng" value="adyy"> <span></span> Adyy</label>
+                                    <label><input type="radio" name="vote-adyy-aheng" value="aheng"> <span></span> Aheng</label>
                                 </div>
-                                <button class="vote-button-small">Vote</button>
+                                <a href="vote-sent.html" class="vote-button-small">Vote</a>
                             </div>
                         </li>
                         <li class="match-item">
@@ -146,10 +146,10 @@
                             </div>
                             <div class="voting-section-small">
                                 <div class="voting-options-small">
-                                    <label><input type="radio" name="vote-aaron-hyruki" value="aaron"> Aaron</label>
-                                    <label><input type="radio" name="vote-aaron-hyruki" value="hyruki"> Hyruki/Death End</label>
+                                    <label><input type="radio" name="vote-aaron-hyruki" value="aaron"> <span></span> Aaron</label>
+                                    <label><input type="radio" name="vote-aaron-hyruki" value="hyruki"> <span></span> Hyruki/Death End</label>
                                 </div>
-                                <button class="vote-button-small">Vote</button>
+                                <a href="vote-sent.html" class="vote-button-small">Vote</a>
                             </div>
                         </li>
                     </ul>
